2010-06-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Date_forward.h: forward declaration of Rcpp::Date and
	support for wrap( container of Rcpp::Date ), e.g. wrap( vector<Date> )

2010-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: New Date class (not yet complete)
	* src/Date.cpp: Implementation for new Date class (not yet complete)
	* inst/unitTests/runit.Date.R: first tests for Rcpp::Date

2010-06-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/SugarBenchmark/: New example trying to benchmark
	new syntactic 'sugar' classes

2010-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppDoxygenExamples.h: Correct three wrong paths for
	ConvolveBenchmak example files, and add missing FastLM/ examples

2010-06-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h: split into more manageable files

	* inst/include/Rcpp/vector/VectorBase.h: simplify the VectorBase class
	so that it is just implementing CRTP. It does not inherit from RObject anymore.
	This will help implementation of sugar.

2010-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDateVector.cpp: Also provide non-const operator()(int i)
	* inst/include/RcppDateVector.h: Idem

2010-06-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/InternalFunction.h: new class Rcpp::InternalFunction
	* R/Module.R: R support for Rcpp::InternalFunction

	* inst/include/Rcpp/Module.h: added the LOAD_RCPP_MODULE macro to
	allow loading a module from C++

	* R/Module.R: if the first argument is an external pointer already,
	Module assumes it is a module pointer. (R support for the item above)

2010-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetimeVector.cpp: Use std::vector internally
	* inst/include/RcppDatetimeVector.h: Idem
	* src/RcppDateVector.cpp: Use std::vector internally
	* inst/include/RcppDateVector.h: Idem

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>
