@@ -1,3 +1,8 @@
+2010-06-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/Date.cpp: Import mktime00() from R's src/main/datetime.c
+	* inst/include/Rcpp/Date.h: Add mktime00() declaration
+
 2010-06-23  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/Date_forward.h: forward declaration of Rcpp::Date and
